// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plan wizard schedule step renders with a warning if migrating an OSP plan immediately 1`] = `
<Form
  bsClass="form"
  className="form-horizontal"
  componentClass="form"
  horizontal={false}
  inline={false}
>
  <Field
    component={[Function]}
    help={
      <div
        className="plan-wizard-vm-power-warning"
      >
        <Icon
          name="warning-triangle-o"
          type="pf"
        />
        <p>
          VMs must be powered on in order to migrate.
          <br />
          Ensure that all VMs in the Migration Plan are powered on before selecting Create.
        </p>
      </div>
    }
    label="Run migration plan"
    labelWidth="3"
    name="migration_plan_choice_radio"
    options={
      Array [
        Object {
          "id": "migration_plan_later",
          "name": "Save migration plan to run later",
        },
        Object {
          "id": "migration_plan_now",
          "name": "Start migration immediately",
        },
      ]
    }
    type="radio"
  />
</Form>
`;

exports[`Plan wizard schedule step renders with no warning if migrating an OSP plan later 1`] = `
<Form
  bsClass="form"
  className="form-horizontal"
  componentClass="form"
  horizontal={false}
  inline={false}
>
  <Field
    component={[Function]}
    help={null}
    label="Run migration plan"
    labelWidth="3"
    name="migration_plan_choice_radio"
    options={
      Array [
        Object {
          "id": "migration_plan_later",
          "name": "Save migration plan to run later",
        },
        Object {
          "id": "migration_plan_now",
          "name": "Start migration immediately",
        },
      ]
    }
    type="radio"
  />
</Form>
`;
